kubernetes.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:10.4
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: postgres-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  ports:
   - port: 5432
  selector:
   app: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: caluma
  labels:
    app: caluma-backend
spec:
  ports:
   - port: 8000
  selector:
   app: caluma-backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caluma-backend
  labels:
    app: caluma-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: caluma-backend
  template:
    metadata:
      labels:
        app: caluma-backend
    spec:
      containers:
      - name: caluma-backend
        image: projectcaluma/caluma:latest
        ports:
        - containerPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caluma-demo
  labels:
    app: caluma-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: caluma-demo
  template:
    metadata:
      labels:
        app: caluma-demo
    spec:
      containers:
      - name: caluma-demo
        image: projectcaluma/caluma-demo:stable
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: caluma-frontend
  labels:
    app: caluma-demo
spec:
  ports:
   - port: 80
  selector:
   app: caluma-demo
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: demo-caluma-io
  labels:
    app: caluma-demo
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: demo.caluma.io
    http:
      paths:
      - path: /
        backend:
          serviceName: caluma-frontend
          servicePort: 80
  tls:
  - hosts:
      - demo.caluma.io
    secretName: demo-caluma-io-tls
